# chocolate_duke3D

./: .gitignore  Makefile  Makefile.am  README.md  V19.7.1_doc.txt  autogen.sh  build-on-64bit-linux.sh  configure.ac  duke3d_vs2012.sln  duke3d_w32.sln
Engine/: Engine.vcxproj  Engine.vcxproj.filters  Engine_vs2005.vcproj  Engine_vs2010.vcxproj  Engine_vs2010.vcxproj.filters
Engine/src/: Makefile  Makefile.am  a.c  a.h  build.h  cache.c  cache.h  cache1d.c  cache1d.h  display.c  display.h  draw.c  draw.h  dummy_multi.c  engine.c  engine.h  engine_protos.h  filesystem.c  filesystem.h  fixedPoint_math.c  icon.h  macos_compat.h  mmulti.c  mmulti.cpp  mmulti_stable.cpp  mmulti_stable.h  mmulti_unstable.h  multi.c  network.c  network.h  platform.h  pragmas.c  pragmas.h  sdl_driver.c  tiles.c  tiles.h  unix_compat.h  win32_compat.h
Engine/src/enet/: api.txt  host.c  list.c  memory.c  packet.c  peer.c  protocol.c  tutorial.txt  unix.c  win32.c
Engine/src/enet/include/: enet.h  protocol.h  types.h  unix.h
Game/: BIN2C.C  Game.vcproj  Game.vcxproj  Game.vcxproj.filters  Game_vs2010.vcxproj  Game_vs2010.vcxproj.filters  Makefile.am  chocolateDukeRessources.rc
Game/src/: DbgHelp.h  Makefile  Makefile.am  _functio.h  _rts.h  actors.c  animlib.c  animlib.h  config.c  config.h  console.c  console.h  control.c  control.h  cvar_defs.c  cvar_defs.h  cvars.c  cvars.h  develop.h  duke3d.h  dukeunix.h  dukewin.h  dummy_audiolib.c  file_lib.h  funct.h  function.h  game.c  game.h  gamedef.c  gamedefs.h  global.c  global.h  joystick.h  keyboard.c  keyboard.h  menues.c  mouse.h  names.h  player.c  premap.c  (+12 more)
Game/src/audiolib/: Makefile  Makefile.am  _al_midi.h  _blaster.h  _guswave.h  _midi.h  _multivc.h  _pas16.h  _sndscap.h  adlibfx.c  adlibfx.h  al_midi.c  al_midi.h  assert.h  awe32.c  awe32.h  blaster.c  blaster.h  ctaweapi.h  debugio.c  dma.c  dpmi.c  dpmi.h  dsl.c  dsl.h  fx_man.c  fx_man.h  gmtimbre.c  gus.c  gusmidi.c  gusmidi.h  guswave.c  guswave.h  irq.c  irq.h  leetimbr.c  ll_man.c  ll_man.h  memcheck.h  midi.c  (+34 more)
Game/src/midi/: Makefile  Makefile.am  databuf.h  sdl_midi.c  win_midiout.cpp  win_midiout.h  xmidi.cpp  xmidi.h
Lib/DirectX_SDK/: README.md
Lib/SDL/: README.md  README.txt
Lib/SDL_Mixer/: README.md  README.txt
vs/: duke3d_vs2005.sln  duke3d_vs2010.sln  duke3d_vs2012.sln
xcode/Duke3D/: SDLMain.h  SDLMain.m
xcode/Duke3D.xcodeproj/: project.pbxproj
xcode/Duke3D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/Duke3DBundle/: Duke3DBundle-Info.plist  Duke3DBundle-Prefix.pch  duke_3d_icon.icns
xcode/Duke3DBundle/en.lproj/: Credits.rtf
